# matfourd

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
include/son8/: README.md  matfourd.hxx
include/son8/matfourd/: core.hxx  layout.hxx  mat.hxx  order.hxx  print.hxx  static.hxx  vec.hxx
include/son8/matfourd/mat/: addition.hxx  additive.hxx  alias.hxx  alter.hxx  equality.hxx  multiply.hxx  type.hxx
include/son8/matfourd/vec/: additive.hxx  alias.hxx  equality.hxx  multiply.hxx  swizzles.hxx  type.hxx
source/: CMakeLists.txt
